# UCLan_HonoursDegreeProject

./: .gitignore
ImageForgeryDetectionPipeline/: ImageManipulationDetection_01_ResNet.ipynb  ImageManipulationDetection_02_EfficientNet.ipynb  ImageManipulationDetection_03_EfficientNet.ipynb  main.py  pyproject.toml
ImageForgeryDetectionPipeline/ForgeryDetectionModelEfficientNet/: best_forgery_model.pth  model_binary_pretrained_01.pth  model_binary_pretrained_02.pth  model_localization_unet_01.pth  model_localization_unet_02.pth  model_type_pretrained_02.pth
ImageForgeryDetectionPipeline/ForgeryDetectionModelResNet/: best_forgery_model.pth  model_binary_01.pth  model_binary_pretrained_01.pth  model_type_01.pth  model_type_pretrained_01.pth
